Drop --add-exports from the test